welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: ')' expected but ';' found.
	(if (isBirthday) {speed=speed-5};)
                                        ^caughtSpeeding:2: error: illegal start of statement
	(if (isBirthday) {speed=speed-5};)
                                         ^